# all-time-battle

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GAME_DESIGN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_1.md  PROJECT_GUIDE.md  README.md  pyproject.toml  voices.txt
config/: balance.yaml  conditions.yaml  hazards.yaml  lore.yaml  moves.yaml  settings.yaml  zones.yaml
config/prompts/: action_classify.md.j2  awards.md.j2  character_gen.md.j2  gremlin_classify.md.j2  montage_classify.md.j2  narrate.md.j2
design/: mockup_host_screen.html  mockup_player_screen.html
scripts/: ai_smoke.py  balance_engine.py  balance_sim.py  balance_sim_v3.py  make_sfx.py  mine_flavor.py  mine_wildcards.py
server/: config.py  gallery.py  main.py  poster.py  protocol.py  room.py  snapshots.py  state_machine.py
server/ai/: client.py  provider.py  schemas.py  validators.py
server/engine/: conditions.py  demo.py  dice.py  hazards.py  models.py  moves.py  resolver.py  zones.py
tests/: conftest.py  test_ai_client.py  test_ai_schemas.py  test_ai_validators.py  test_arena_js.py  test_canvas_js.py  test_conditions.py  test_config.py  test_dice.py  test_flavor.py  test_gallery.py  test_poster.py  test_resolver.py  test_sim.py  test_state_machine.py  test_tts_js.py  test_web.py  test_wildcards.py  test_zones.py
tests/js/: arena_reveal.test.js  arena_stands.test.js  canvas_prefill.test.js  host_intros.test.js  tts.test.js
tests/sim/: __init__.py  engine_sim.py  simulation.py
web/host/: arena.js  audio.js  index.html  tts.js
web/player/: canvas.js  index.html
(+3 files in other folders)
