[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doodle-brawl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "coverage>=7.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
